[package]
name = "terminal_color_builder"
version = "0.1.1"
authors = ["Christian Rodriguez Benthake <git@cben.co>"]
edition = "2018"
keywords = [
    "terminal",
    "cli",
    "colors",
    "builder",
    "print",
]
categories = ["command-line-interface"]
repository = "https://github.com/ChrisB9/terminal_color_builder"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/terminal_color_builder"
description = "Printing colorful terminal outputs using a builder pattern."

[dependencies]
